# neural_mpc

./: .gitignore  .gitmodules  README.md  entropy_reduction_mpc.py  gemini_test.py  gemini_test_activation_function.py  gemini_test_entropy.py  generate_dataset.py  global_planner_1d.py  global_planner_2d.py  main.ipynb  main_unity_test.ipynb  main_unity_test_modified.ipynb  plot_heatmaps.ipynb  rbfnn_model.pth  requirements.txt  rootfinder_1d.py  rootfinder_2d.py  run_multi.sh  test_regression.py  tools.py  train&test_nmpc.ipynb  trainRBF.py  trainRBF_1d.py  trainRBF_2d.py  trainRBF_synthetic_surrogate.py  trainRBF_synthetic_surrogate_3d.py  transition.py
ros/src/nmpc_ros/: CMakeLists.txt  baseline_node.py  data_association_node.py  fov_mpc.py  kmeans.py  multi_data_association_node.py  multi_nmpc_ros_node.py  nmpc_ros_node.py  nmpc_ros_node_decay.py  package.xml  plot_csv_comparison.py  plot_lambda.py  plot_lambda_multi.py  plot_mpc_batch_test_metrics.py  plot_trajectory.py  plot_trajectory_multi.py  setup.py
ros/src/nmpc_ros/launch/: baseline.launch  gp_mpc.launch  miele_test.launch  nmpc.launch  nmpc_decay.launch  nmpc_multi.launch  nmpc_multi_only_kmeans.launch
ros/src/nmpc_ros/results/: plot_batch_comparison_w_baselines.py  plot_batch_metrics_comparison.py  plot_metrics_comparison.py  plot_trajectories.py  plot_trajectory.py
ros/src/nmpc_ros/src/: nmpc_multi.py  nmpc_multi_grid_test.py
ros/src/nmpc_ros/src/baselines/: mpc_20250331_103412_performance_metrics.csv  mpc_20250331_103412_plot_data.csv  mpc_20250331_103412_velocity_commands.csv  mpc_20250331_111335_performance_metrics.csv  mpc_20250331_111335_plot_data.csv  mpc_20250331_111335_velocity_commands.csv  mpc_20250331_111513_performance_metrics.csv  mpc_20250331_111513_plot_data.csv  mpc_20250331_111513_velocity_commands.csv  mpc_20250331_111956_performance_metrics.csv  mpc_20250331_111956_plot_data.csv  mpc_20250331_111956_velocity_commands.csv  mpc_20250331_112812_performance_metrics.csv  mpc_20250331_112812_plot_data.csv  mpc_20250331_112812_velocity_commands.csv  mpc_20250331_114312_performance_metrics.csv  mpc_20250331_114312_plot_data.csv  mpc_20250331_114312_velocity_commands.csv  (+45 more)
ros/src/nmpc_ros/srv/: GetTreesPoses.srv
ros/src/nmpc_ros/test/: catwalk.py  test.ipynb
(+31 files in other folders)
